name:                graph
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jbddc/sdc-graph#readme
license:             BSD3
license-file:        LICENSE
author:              Author  Joao Costa, Rafael Barbosa
maintainer:          a70430@alunos.uminho.pt
copyright:           2017 Author Joao Costa, Rafael Barbosa
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable graph
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:      Graph RandomAttachment PrefAttachment
  build-depends:       base >= 4.7 && < 5
                      , random
                      , mtl >= 2.2.1
                      , containers >= 0.5
                      , timeit
                      , Chart
                      , Chart-cairo
                      , QuickCheck
